--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icon-cloud": "^4.1.4",
+    "react-icons": "^5.3.0",
     "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
