--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.3.0",
     "react-type-animation": "^3.2.0",
